--- a/_config.yml
+++ b/_config.yml
@@ -20,72 +20,64 @@ navigation:
 events:
   - date: '14:e'
     time: '7:30 - 8:30'
-    name: 'Future of Mobile Apps'
-    location: 'Gomorron Östersund'
-    description: 'Bontouch bjuder in till föreläsning om Future of mobile apps på Gomorron Östersund. De bjuder på frukost i samband med föreläsningen!'
+    name: 'Framtidens digitala användargränssnitt'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'Bontouch har ett långt förflutet inom mobil apputveckling och jobbar med varumärken såsom Swish, SJ, Postnord och Skistar. Vi håller konstant bevakning på det senaste i branschen och genom konferenser likt Google I/O och WWDC skaffar vi oss en förståelse för framtidens digitala användargränssnitt. I den här presentationen tittar vi närmare på hur etablerade gränssnitt påverkas och hur nya gränssnitt tar form genom giganterna Apple, Google, Amazon och Microsofts framfart på området.<br><br>Kom och ät frukost med oss om du är digital produktägare, projektledare, designer, utvecklare eller bara allmänt intresserad. Är du student och vill förstå var vilken typ av jobb framtiden har att erbjuda, anmäl dig nu.'
   - date: '14:e'
     time: '12:00 - 13:00'
-    name: 'UX'
-    location: 'Gomorron Östersund'
-    description: 'Bontouch Östersund bjuder in till föreläsning om UX på Gomorron Östersund. De bjuder på lunch i samband med föreläsningen!'
+    name: 'Effektiv UX-design'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'Bontouch har tio års erfarenhet att av designa och bygga innovativa digitala användarupplevelser. I den här presentationen går vi igenom 9 designprinciper för att infria och överträffa slutanvändarnas högt ställda förväntningar. Som bolag har vi en stark mobil inriktning, men principerna är applicerbara på andra skärmbaserade användargränssnitt.<br><br>Kom och lyssna om du är digital produktägare, designer, utvecklare eller bara allmänt intresserad av det senaste inom UX. Är du student och vill få inblick i affärslivet på detta område, tveka inte, anmäla dig idag.<br><br>Har du en egen design som du vill få feedback på, ta med dig den så har vi experter på plats som kan komma med tips och råd.<br><br>Kom hungrig, vi bjuder på lunch, välkomna!'
   - date: '14:e'
     time: '16:30 - 19:30'
-    name: 'Kubernetes'
-    location: 'Gomorron Östersund'
-    description: 'DigitalRoute  bjuder in till föreläsning om Kubernetes på Gomorron Östersund. De bjuder på dryck och snacks i samband med föreläsningen!'
+    name: 'Cloud computing med Kubernetes'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'DigitalRoute bjuder in till föreläsning om Kubernetes på Gomorron Östersund. Vi ger en introduktion till cloud computing , varför det är så viktigt och om hur vi med hjälp av open source tekniken Kubernetes lyckats ta vår marknadsledande data-processing-plattform in i molnet. Intressant för utvecklare, arkitekter, IT-chefer och andra i branchen.<br><br>Vi bjuder på öl och snacks i samband med föreläsningen!'
   - date: '15:e'
     time: '7:30 - 8:15'
     name: 'ATEA'
-    location: 'ATEA Östersund'
-    description: 'ATEA bjuder in till föreläsning om ATEA Business på sitt kontor i Östersund (Öneslingan 7). De bjuder på frukost i samband med föreläsningen!'
+    location: 'ATEA&nbsp;Östersund (Öneslingan&nbsp;7)'
+    description: 'ATEA bjuder in till föreläsning om ATEA Business på sitt kontor i Östersund. De bjuder på frukost i samband med föreläsningen!'
   - date: '15:e'
     time: '12:00 - 13:00'
-    name: 'Clean Code'
-    location: 'Cybercom'
-    description: 'Cybercom Östersund bjuder in till föreläsning om Clean Code på vårt kontor på Rådhusgatan 56 i Östersund. Vi  bjuder på enklare lunch (wraps + dryck) i samband med föreläsningen!<br><br>
-En föreläsning som riktar sig till yrkesverksamma juniora och seniora systemutvecklare där vi tittar djupare på varför kodkvalité är viktigt och vilka faktorer som påverkar systemets livscykel och oss som individer.
-Föreläsare är Henrik Kindvall, anställd på Cybercom i Östersund.
-Beräknad tidsåtgång är 30-45 minuter.'
+    name: 'CleanCode'
+    location: 'Cybercom (Rådhusgatan&nbsp;56)'
+    description: 'Cybercom Östersund bjuder in till föreläsning om Clean Code på vårt kontor på Rådhusgatan 56 i Östersund. Vi  bjuder på enklare lunch (wraps + dryck) i samband med föreläsningen!<br><br>En föreläsning som riktar sig till yrkesverksamma juniora och seniora systemutvecklare där vi tittar djupare på varför kodkvalité är viktigt och vilka faktorer som påverkar systemets livscykel och oss som individer.<br><br>Föreläsare är Henrik Kindvall, anställd på Cybercom i Östersund.<br><br>Beräknad tidsåtgång är 30-45 minuter.'
   - date: '15:e'
     time: '16:30 - 19:30'
     name: 'Kodar-bloopers och andra war stories'
-    location: 'Gomorron Östersund'
-    description: 'Ibland går det åt skogen i systemutvecklingsprojekt. Att det blir fel ibland är mänskligt, och går inte att undvika. Det viktiga är då att vi lär oss av misstagen för att hela tiden förbättras.<br><br>Välkommen på ett avslappnat AW-häng med oss på Cygni Östersund. Vi berättar om några goa kodarbloopers vi gjort, andra war stories och vad vi lärt oss av dem. Du är också välkommen att dela med dig av dina! Vi bjuder på mat och dryck, och vi stannar så länge det finns folk kvar. För och med systemutvecklare!'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'bland går det åt skogen i systemutvecklingsprojekt. Att det blir fel ibland är mänskligt, och går inte att undvika. Det viktiga är då att vi lär oss av misstagen för att hela tiden förbättras.<br><br>Välkommen på ett avslappnat AW-häng med oss på Cygni Östersund. Vi berättar om några goa kodarbloopers vi gjort, andra war stories och vad vi lärt oss av dem. Du är också välkommen att dela med dig av dina! Vi bjuder på mat och dryck, och vi stannar så länge det finns folk kvar. För och med systemutvecklare!'
   - date: '16:e'
     time: '7:30 - 8:15'
     name: 'Jämtland Härjedalen ledande inom E-hälsa'
-    location: 'E-Hälsocentrum'
-    description: 'Sigma och E-hälsocentrum bjuder in till föreläsning om Jämtland Härjedalen ledande inom E-hälsa på E-hälsocentrum. De bjuder på frukost i samband med föreläsningen!'
+    location: 'E-Hälsocentrum (Zätagränd&nbsp;3,&nbsp;plan&nbsp;7)'
+    description: 'Sigma, Region JH och We&Sports bjuder in till föreläsning om E-hälsa. Vi förklarar vad E-hälsa innebär och hur det unika samarbetet mellan näringslivet och offentliga sektorn fungerar på E-hälsocentrum. Vi bjuder på frukost och ni får ta del av spännande projekt som vi berättar om. We&Sports lyfter fram mental hälsa för idrottare, Region JH visar på goda exempel inom distansvård och Sigma förklarar varför E-hälsa är så viktigt. Välkomna till E-hälsocentrum, Zätagränd 3 och plan 7.'
   - date: '16:e'
     time: '12:00 - 13:00'
     name: 'Monitoring Health Application'
-    location: 'Tieto'
-    description: 'Tieto Östersund bjuder in till föreläsning om Monitoring Health Application på sitt kontor i Östersund (Kyrkgatan 60). De bjuder på lunch i samband med föreläsningen!'
+    location: 'Tieto (Kyrkgatan&nbsp;60)'
+    description: 'Tieto Östersund bjuder in till föreläsning om Monitoring Health Application på sitt kontor i Östersund. De bjuder på lunch i samband med föreläsningen!'
   - date: '16:e'
     time: '16:30 - 19:30'
     name: 'Microservices'
-    location: 'House Be'
-    description: 'Forefront consulting bjuder in till föreläsning om Microservices på House Be i Åre (Kurortsvägen 20). De bjuder på snacks och dryck i samband med föreläsningen!'
+    location: 'House Be (Kurortsvägen&nbsp;20,&nbsp;Åre)'
+    description: 'Forefront consulting bjuder in till föreläsning om Microservices på House Be i Åre. De bjuder på snacks och dryck i samband med föreläsningen!'
   - date: '17:e'
     time: '7:30 - 8:30'
     name: 'Det vinnande laget'
-    location: 'Gomorron Östersund'
-    description: 'Sopra Steria bjuder in till en frukostföreläsning med Magnus Swartling, fd IT-konsult och trefaldig världsmästare i Curling. Magnus åker land och rike runt med sin föreläsning "Jaget och Laget" som handlar om hur du ger dig själv mandatet att bestämma din egen väg framåt och hur laget och jaget behöver fungera ihop för att skapa härliga resultat.
-I dagens föreläsning väver Magnus in anekdoter från sin egna karriär inom IT-branschen.'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'Sopra Steria bjuder in till en frukostföreläsning med Magnus Swartling, fd IT-konsult och trefaldig världsmästare i Curling. Magnus åker land och rike runt med sin föreläsning "Jaget och Laget" som handlar om hur du ger dig själv mandatet att bestämma din egen väg framåt och hur laget och jaget behöver fungera ihop för att skapa härliga resultat.<br><br>I dagens föreläsning väver Magnus in anekdoter från sin egna karriär inom IT-branschen.<br><br>Föreläsningen riktar sig till alla inom IT-branschen och kommer att hållas på Gomorron Östersund - Prästgatan 42. Eftersom vi bjuder på frukost så vill vi ha din anmälan senast tisdag den 15 oktober. Begränsat antal platser.'
   - date: '17:e'
     time: '12:00 - 13:00'
     name: 'Fraud Detection'
-    location: 'Gomorron Östersund'
-    description: 'Sopra Steria bjuder in till en föreläsning kring fraud detection med hjälp av datanalyser och AI. Hur samlas data in och koordineras mellan länder för att spåra produkter från produktion till konsumtion samt hur används AI för att upptäcka bedrägerier.<br><br>Serge de Gosson de Varennes är Data Scientist och seniorkonsult på Sopra Steria. Han har efter ett antal år av forskning i matematik arbetat hos oss som specialist inom Analytics, AI och Machine Learning för t.ex. befolkningssimulering, hälso- och sjukvård och fraud detection. Serge är en av Sopra Steria Sveriges experter inom avancerad analys, datastrategi och artificiell intelligens.
-
-Föreläsningen riktar sig till systemutvecklare och kommer att hållas på svenska.'
+    location: 'Gomorron&nbsp;Östersund (Prästgatan&nbsp;42)'
+    description: 'Sopra Steria bjuder in till en föreläsning kring fraud detection med hjälp av datanalyser och AI. Hur samlas data in och koordineras mellan länder för att spåra produkter från produktion till konsumtion samt hur används AI för att upptäcka bedrägerier.<br><br>Serge de Gosson de Varennes är Data Scientist och seniorkonsult på Sopra Steria. Han har efter ett antal år av forskning i matematik arbetat hos oss som specialist inom Analytics, AI och Machine Learning för t.ex. befolkningssimulering, hälso- och sjukvård och fraud detection. Serge är en av Sopra Steria Sveriges experter inom avancerad analys, datastrategi och artificiell intelligens.<br><br>Föreläsningen riktar sig till systemutvecklare och kommer att hållas på svenska.<br><br>Plats Gomorron Östersund - Prästgatan 42. Begränsat antal platser. Eftersom vi bjuder på lunch vill vi ha din anmälan senast tisdag den 15 oktober.'
   - date: '17:e'
     time: '16:30 - 19:30'
     name: 'Blockchain'
     location: 'CGI'
-    description: 'CGI Östersund (Rådhusgatan 15 - 17) bjuder in till föreläsning om Blockchain med nyutnämnde MVP:n Stephen Haunts (stephenhaunts.com) på CGI:s kontor i Östersund.
-Efter föreläsningen bjuder vi på AW, skönt eftersnack, pizza, snacks och dryck.
-Anmälan är öppen även för studenter från de tekniska utbildningarna Programvaruteknik och Informatik med inriktning systemutveckling.'
+    description: 'CGI Östersund bjuder in till föreläsning om Blockchain med nyutnämnde MVP:n Stephen Haunts (stephenhaunts.com) på CGI:s kontor i Östersund.<br><br>Efter föreläsningen bjuder vi på AW, skönt eftersnack, pizza, snacks och dryck.<br><br>Anmälan är öppen även för studenter från de tekniska utbildningarna Programvaruteknik och Informatik med inriktning systemutveckling.'
 
 sass:
     sass_dir: assets/stylesheet
