Tieto text update

--- a/_config.yml
+++ b/_config.yml
@@ -50,9 +50,9 @@ events:
     description: 'Sigma, Region JH och We&Sports bjuder in till föreläsning om E-hälsa. Vi förklarar vad E-hälsa innebär och hur det unika samarbetet mellan näringslivet och offentliga sektorn fungerar på E-hälsocentrum. Vi bjuder på frukost och ni får ta del av spännande projekt som vi berättar om. We&Sports lyfter fram mental hälsa för idrottare, Region JH visar på goda exempel inom distansvård och Sigma förklarar varför E-hälsa är så viktigt. Välkomna till E-hälsocentrum, Zätagränd 3 och plan 7.'
   - date: '16:e'
     time: '12:00 - 13:00'
-    name: 'Monitoring Health Application'
+    name: 'Hälsocheck och övervakning av applikationer och infrastruktur'
     location: 'Tieto (Kyrkgatan&nbsp;60)'
-    description: 'Tieto Östersund bjuder in till föreläsning om Monitoring Health Application på sitt kontor i Östersund. De bjuder på lunch i samband med föreläsningen!'
+    description: 'Tieto Östersund bjuder in till lunchföreläsning och diskussion kring ämnet övervakning av applikationer, infrastruktur och integrationer. Vad bör man tänka på redan i utvecklingen av applikationer och design av system? Vilken typ av hälsocheck vill och kan vi göra? Vad kan vi automatisera för typ av åtgärder när något gått snett? Hur ser en bra samverkan ut mellan utvecklare och driftpersonal där vi har effektiva arbetsflöden med monitorering och effektiv datainsamling. Vilka verktyg använder vi som gör det möjligt att göra en hälsocheck, djupdykning i trender, se avvikelser och få detaljerade rapporter.<br><br>Vi bjuder på enklare lunch (wraps + dryck) i samband med föreläsningen. Föreläsningen är en introduktion till ämnet och vänder sig till både utvecklare och driftspersonal, även studenter är välkomna.<br><br>Lunchföreläsningen hålls av Jonas Mixter från Tieto och beräknad tidsåtgång är 30-45 minuter.<br><br>Jonas är Linuxspecialist och har lång erfarenhet av lösningar med stort inslag av OpenSource. Ett av de områden som Jonas arbetar med är övervakning av applikationer och infrastruktur  och på föreläsningen kommer vi dela med oss av erfarenheter och utmaningar kring att övervaka system och applikationer med många datakällor och beroenden.'
   - date: '16:e'
     time: '16:30 - 19:30'
     name: 'Microservices'
