Adding companies to startpage

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,189 @@ assets:
     - assets/images
     - assets/stylesheet
 
+companies:
+  consultants:
+    - name: 'Adeprimo'
+      url: 'https://adeprimo.se'
+      image: 'adeprimo.jpg'
+    - name: 'Aloq'
+      url: 'https://aloq.se'
+      image: 'aloq.jpeg'
+    - name: 'ATEA'
+      url: 'https://www.atea.se/'
+      image: 'atea.jpeg'
+    - name: 'Axeg'
+      url: 'https://www.axeg.se'
+      image: 'axeg.png'
+    - name: 'Bontouch'
+      url: 'https://www.bontouch.com'
+      image: 'bontouch.png'
+    - name: 'CGI'
+      url: 'https://www.cgi.se/sv'
+      image: 'cgi.png'
+    - name: 'Combitech'
+      url: 'https://combitech.se'
+      image: 'combitech.jpeg'
+    - name: 'Coresource Solutions'
+      url: 'http://www.coresource.se'
+      image: 'coresource.png'
+    - name: 'C-Rad Imaging'
+      url: 'https://c-rad.se'
+      image: 'crad.svg'
+    - name: 'Cybercom'
+      url: 'https://www.cybercom.com/sv/'
+      image: 'cybercom.jpeg'
+    - name: 'Cygni'
+      url: 'https://cygni.se'
+      image: 'cygni.png'
+    - name: 'Digital Route'
+      url: 'https://www.digitalroute.com'
+      image: 'digitalroute.png'
+    - name: 'EG'
+      url: 'https://eg.se'
+      image: 'eg.svg'
+    - name: 'Forefront Consulting Group'
+      url: 'https://www.ffcg.se'
+      image: 'ffcg.svg'
+    - name: 'InfoCare Service'
+      url: 'http://infocare.com/se/'
+      image: 'infocare.png'
+      background: '#000000'
+    - name: 'Infoflex'
+      url: 'http://www.infoflex.se/'
+      image: 'infoflex.png'
+      background: '#D2091D'
+    - name: 'Internetmedia'
+      url: 'https://www.internetmedia.se/'
+      image: 'internetmedia.png'
+    - name: 'Kaj63'
+      url: 'http://www.kaj63.se/'
+      image: 'kaj63.jpg'
+    - name: 'Manicon'
+      url: 'http://www.maincon.se/'
+      image: 'maincon.png'
+    - name: 'Mina Bästa Polare'
+      url: 'https://www.minabastapolare.se/'
+      image: 'mbp.png'
+    - name: 'Qrendo'
+      url: 'http://qrendo.se/'
+      image: 'qrendo.png'
+    - name: 'Sigma'
+      url: 'https://www.sigmait.se'
+      image: 'sigma.png'
+    - name: 'Sopra Steria'
+      url: 'https://www.soprasteria.se'
+      image: 'soprasteria.png'
+    - name: 'Sweco'
+      url: 'https://www.sweco.se/'
+      image: 'sweco.png'
+    - name: 'Tieto'
+      url: 'https://www.tieto.com/se/'
+      image: 'tieto.png'
+    - name: 'Webmyran'
+      url: 'http://www.webmyran.se/'
+      image: 'webmyran.png'
+      background: '#E0007B'
+    - name: 'Vinnam atchen'
+      url: 'http://vinnamatchen.se/'
+      image: 'vinnamatchen.png'
+    - name: 'Virtuelldesign'
+      url: 'http://www.virtuelldesign.se/teknik/vi-erbjuder/'
+      image: 'virtuelldesign.png'
+    - name: 'Infra Action'
+      url: 'https://www.infraaction.se/dotterbolag/infra-action-yz-ab'
+      image: 'infraaction.jpg'
+    - name: 'Invativa'
+      url: 'https://invativa.se/'
+      image: 'invativa.png'
+  product:
+    - name: 'Football Analytics Sweden'
+      url: 'https://www.playmaker.ai'
+      image: 'playmaker.png'
+    - name: 'Attest.nu'
+      url: 'https://attest.nu'
+      image: 'attest.png'
+    - name: 'Bisnode'
+      url: 'https://www.bisnode.se'
+      image: 'bisnode.svg'
+    - name: 'Extenda'
+      url: 'https://www.extendaretail.com/sv/'
+      image: 'extenda.png'
+    - name: 'Food Today'
+      url: 'http://www.foodtoday.se/'
+      image: 'foodtoday.png'
+    - name: 'Fujitsu'
+      url: 'https://www.fujitsu.com/se/'
+      image: 'fujitsu.png'
+    - name: 'Wide Ideas'
+      url: 'https://getwideideas.com'
+      image: 'wideideas.png'
+      background: '#01B8E4'
+    - name: 'Interlan'
+      url: 'https://www.interlan.se/'
+      image: 'interlan.svg'
+    - name: 'Iron Mountain'
+      url: 'https://www.ironmountain.se/sv/'
+      image: 'ironmountain.svg'
+    - name: 'Jadaab'
+      url: 'http://jadaab.se/'
+      image: 'jadaab.svg'
+    - name: 'Loxysoft'
+      url: 'https://www.loxysoft.com/sv/'
+      image: 'loxysoft.svg'
+      background: '#394B5D'
+    - name: 'Ascendo'
+      url: 'https://www.ascendo.se/'
+      image: 'ascendo.png'
+    - name: 'Netgraph Connect'
+      url: 'https://www.netgraph-connect.com/?lang=sv'
+      image: 'netgraph.svg'
+    - name: 'Pagero'
+      url: 'https://www.pagero.se/'
+      image: 'pagero.png'
+    - name: 'Posti Messaging'
+      url: 'https://www.postimessaging.se/'
+      image: 'postimessaging.jpeg'
+    - name: 'Realbridge'
+      url: 'http://www.realbridge.se/'
+      image: 'realbridge.png'
+    - name: 'Rebnis'
+      url: 'https://www.rebnis.se/'
+      image: 'rebnis.png'
+    - name: 'RemaSawco'
+      url: 'http://www.remasawco.se/'
+      image: 'remasawco.png'
+    - name: 'tretton37'
+      url: 'https://tretton37.com/'
+      image: 'tretton37.png'
+    - name: 'Voyado'
+      url: 'https://www.voyado.com/'
+      image: 'voyado.png'
+    - name: 'scancloud'
+      url: 'https://www.scancloud.se/'
+      image: 'scancloud.jpeg'
+    - name: 'Siteserver'
+      url: 'https://www.siteserver.se/'
+      image: 'siteserver.png'
+    - name: 'Streamify'
+      url: 'https://www.streamify.io/'
+      image: 'streamify.png'
+    - name: 'Vitecsoftware'
+      url: 'https://www.vitecsoftware.com/sv'
+      image: 'vitec.png'
+    - name: 'Pierce'
+      url: 'http://pierce-ecom.com/about/'
+      image: 'pierce.png'
+    - name: 'Its in the node'
+      url: 'https://www.itsinthenode.com/se'
+      image: 'node.png'
+    - name: 'Zero Parallax'
+      url: 'http://www.zeroparallax.se/'
+      image: 'zeroparallax.png'
+    - name: 'Scriin'
+      url: 'https://www.scriin.com/'
+      image: 'scriin.png'
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
