--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,10 @@ companies:
     - name: 'Forefront Consulting Group'
       url: 'https://www.ffcg.se'
       image: 'ffcg.svg'
+    - name: 'Grand North'
+      url: 'https://grandnorth.se/'
+      image: 'grandnorth.svg'
+      background: '#F7F7F7'
     - name: 'InfoCare Service'
       url: 'http://infocare.com/se/'
       image: 'infocare.png'
