Digitalist added and arrays sorted

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,9 @@ companies:
     - name: 'Digital Route'
       url: 'https://www.digitalroute.com'
       image: 'digitalroute.png'
+    - name: 'Digitalist'
+      url: 'https://www.digitalist.se/'
+      image: 'digitalist.png'
     - name: 'EG'
       url: 'https://eg.se'
       image: 'eg.svg'
