Moved one company, added two more

--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,9 @@ companies:
     - name: 'Tieto'
       url: 'https://www.tieto.com/se/'
       image: 'tieto.png'
+    - name: 'tretton37'
+      url: 'https://tretton37.com/'
+      image: 'tretton37.png'
     - name: 'Webmyran'
       url: 'http://www.webmyran.se/'
       image: 'webmyran.png'
@@ -130,6 +133,9 @@ companies:
     - name: 'Bisnode'
       url: 'https://www.bisnode.se'
       image: 'bisnode.svg'
+    - name: 'Carcare'
+      url: 'https://car-care.se'
+      image: 'carcare.svg'
     - name: 'Digital Route'
       url: 'https://www.digitalroute.com'
       image: 'digitalroute.png'
@@ -180,9 +186,6 @@ companies:
     - name: 'RemaSawco'
       url: 'http://www.remasawco.se/'
       image: 'remasawco.png'
-    - name: 'tretton37'
-      url: 'https://tretton37.com/'
-      image: 'tretton37.png'
     - name: 'Voyado'
       url: 'https://www.voyado.com/'
       image: 'voyado.png'
@@ -210,6 +213,9 @@ companies:
     - name: 'Scriin'
       url: 'https://www.scriin.com/'
       image: 'scriin.png'
+    - name: 'Voady'
+      url: 'https://voady.se'
+      image: 'voady.svg'
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
